--- a/css/common.css
+++ b/css/common.css
@@ -2,19 +2,87 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -24,8 +92,17 @@ time, mark, audio, video {
 }
 
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
   display: block;
 }
 
@@ -33,16 +110,20 @@ body {
   line-height: 1;
 }
 
-ol, ul {
+ol,
+ul {
   list-style: none;
 }
 
-blockquote, q {
+blockquote,
+q {
   quotes: none;
 }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
   content: '';
   content: none;
 }
@@ -76,13 +157,27 @@ figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video
 */
-p, pre, ul, ol, dl, table, div, blockquote, figure, aside {
+p,
+pre,
+ul,
+ol,
+dl,
+table,
+div,
+blockquote,
+figure,
+aside {
   margin-top: 1em;
   font-size: 0.94em;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   font-size: 1em;
+  height: 100%;
 }
 
 img {
@@ -91,13 +186,14 @@ img {
 }
 
 h1 {
-  font-size : 1.5em;
+  font-size: 1.5em;
   padding: 1em;
 }
 
 ul {
   margin-left: 1em;
 }
+
 li {
   margin-left: 1em;
 }
@@ -107,23 +203,61 @@ nav {
   padding: 0.5em 1em;
   background-color: #470a47;
 }
+
 nav a {
   color: #eeeeee;
 }
 
 article {
-  margin-left : 1em;
+  margin-left: 1em;
 }
 
 section {
   margin-top: 1em;
 }
 
+h1 {
+  text-align: center;
+}
+
 section h2 {
   border-left: solid 5px #470a47;
   border-bottom: solid 1px #470a47;
   padding-left: 0.5em;
+  margin-top: 1.5em;
 }
-section p, section figure {
+
+section p,
+section figure {
   margin-left: 1em;
+}
+
+
+main {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: left;
+  width: 650px;
+}
+
+footer {
+  color: #505050;
+  text-align: center;
+  position: sticky;
+  top: 100vh;
+  width: 100%;
+  margin-bottom:0.5em;
+}
+
+.center {
+  text-align: center;
+}
+
+.jp-comment {
+  margin-top: 0;
+  color: #aaaaaa;
+}
+
+.disabled {
+  color: #a5a5a5;
 }
